--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -12,3 +12,14 @@
   background: white;
   font-family: 'Open Sans';
 }
+
+.btn-artist-show {
+  background-color: #7e57c2;
+  border: none;
+  height: 35px;
+  font-family: 'Open Sans';
+  color: white;
+  font-weight: 500;
+
+}
+
