take 2 with font awesome

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,8 @@
 
 // External libraries
 @import "vendor/index";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 // Your CSS
 @import "layout/index";
