--- a/app/views/pages/_featured_artist.html.erb
+++ b/app/views/pages/_featured_artist.html.erb
@@ -3,20 +3,15 @@
 <div class="featured-artist-card">
 <div class="container-fluid">
   <div class="row no-gutter">
-    <div class="col-xs-4">
-      <%= image_tag "https://s-media-cache-ak0.pinimg.com/originals/8b/d3/91/8bd3919f20dd898ad5cc9b1d37c5577a.jpg", class: "image-rectangle-small first-image" %>
+    <div class="col-xs-4 image-rectangle-small" style="background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.2) 0%, rgba(67, 67, 67, 0.2) 50%), url('https://s-media-cache-ak0.pinimg.com/originals/8b/d3/91/8bd3919f20dd898ad5cc9b1d37c5577a.jpg'); background-size: cover;">
         <div class="explore-art">
-          <h4>Featured Artist</h4>
-          <p>Take a look at our
-          top artist works</p>
-          <%= link_to "Discover art" %>
+          <h4 class="font-white-small">Featured Artist</h4>
+          <%= link_to "Explore", '#', class: "btn btn-explore" %>
         </div>
     </div>
-    <div class="col-xs-4">
-      <%= image_tag "http://oddstuffmagazine.com/wp-content/uploads/2013/07/Beautiful-Tattoos-for-girls-41.jpg", class: "image-rectangle-small" %>
+    <div class="col-xs-4 banner image-rectangle-small" style="background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.2) 0%, rgba(67, 67, 67, 0.2) 50%), url('http://oddstuffmagazine.com/wp-content/uploads/2013/07/Beautiful-Tattoos-for-girls-41.jpg'); background-size: cover;">
     </div>
-    <div class="col-xs-4">
-      <%= image_tag "http://bust.com/images/articles/37185/Screen_Shot_2016-12-07_at_3.46.41_PM.png", class: "image-rectangle-small" %>
+    <div class="col-xs-4 image-rectangle-small" style="background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.2) 0%, rgba(67, 67, 67, 0.2) 50%), url('http://bust.com/images/articles/37185/Screen_Shot_2016-12-07_at_3.46.41_PM.png'); background-size: cover;">
     </div>
   </div>
 </div>
