third times the charm

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -5,6 +5,8 @@
   font-family: 'Open Sans';
   color: white;
   font-weight: 500;
+  margin-left: 5px;
+  //border-radius: 4px;
 }
 
 .dropdown-style {
