--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -47,10 +47,13 @@
   font-family: 'Open Sans';
   color: white;
   font-weight: 500;
+
 }
 
 
-
+.paragraph-text-align{
+  text-align: justify;
+}
 
 
 
