Edit form for new review

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -15,6 +15,16 @@
   font-family: 'Open Sans';
 }
 
+// .btn-purple {
+//   background-color: #7e57c2;
+//   border: none;
+//   height: 35px;
+//   font-family: 'Open Sans';
+//   color: white;
+//   font-weight: 500;
+
+// }
+
 .btn-artist-show {
   background-color: #7e57c2;
   border: none;
