--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,14 +1,13 @@
 
 
-<h4 class="text-center"> Create a New Appointment </h4>
-<div class="container">
+<h3 class="text-center"> Book an appointment with <%= @artist.name %> </h3>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-offset-3 col-xs-4">
 
      <%= simple_form_for [@artist, @appointment], url: artist_appointments_path, method: :post do |f| %>
 
 
-     <%= f.input :start_time, input_html: {id: 'datetimepicker'} %>
+     <%= f.input :start_time, input_html: {id: 'datetimepicker'}%>
      <%= f.input :end_time, input_html: {id: 'datetimepicker2'} %>
      <%#= f.input :sketch %>
      <%= f.input :photo %>
