--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,8 @@
-<h1>reviews</h1>
+<h4 class="text-center h1-review">Leave a review for <%= @artist.name %></h4>
+<div class="col-xs-offset-3 col-xs-4">
 <%= simple_form_for [@artist, @review] do |f| %>
-<%= f.text_field :description %>
-<%= f.select :rating, options_for_select(%w(0 1 2 3 4 5))  %>
-<%= f.submit %>
+<%= f.input :description, :label=> "Review", required: true, input_html: {style: 'width: 200px; height: 10vh;', rows: 5}, as: :text, class: "review-form"  %>
+<%= f.input :rating, :label => "rating", :collection => [1, 2, 3, 4, 5], :selected => 1, required: true%>
+<%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
+</div>
