--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,9 @@
 
 
 <%if  user_signed_in? %>
-<h1> Hello --> <%#= current_user.email %>
+<h1> Hello --> <%= current_user.email %>
 <% elsif artist_signed_in? %>
-<h1> Hello  --><%#= current_artist.email %>
+<h1> Hello<%= current_artist.email %>
 <% if current_artist.photos.count == 0 %>
 <%= render 'layouts/artist_pictures_select' %>
 
