--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,17 +1,45 @@
-<h1>Purchase of teddy <%= @order.appointment_sku %></h1>
-<%= form_tag order_payments_path(@order) do %>
-  <article>
-    <label class="amount">
-      <span>Amount: <%= humanized_money_with_symbol(@order.amount) %></span>
-    </label>
-  </article>
 
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-    data-name="My Appoinment"
-    data-email="<%= current_user.email %>"
-    data-description="Teddy <%= @order.appointment_sku %>"
-    data-amount="<%= @order.amount_cents %>"
-    data-currency="<%= @order.amount.currency %>"></script>
+<div class="wrapper">
 
-<% end %>
+  <div class="row">
+    <div class="col-xs-12">
+
+      <div class="container-fluid text-center">
+
+
+      <h4>Your Appoinment With <%= @order.appointment_sku %></h4>
+
+
+      <%= image_tag @artist.avatar, class: "img-circle" %>
+
+      <p> <%=  @artist.name %></p>
+
+
+        <%= form_tag order_payments_path(@order) do %>
+        <article>
+          <label class="amount">
+            <span>Deposit: <%= humanized_money_with_symbol(@order.amount) %></span>
+          </label>
+        </article>
+
+
+
+
+        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+        data-name="My Appoinment"
+        data-email="<%= current_user.email %>"
+        data-description="Teddy <%= @order.appointment_sku %>"
+        data-amount="<%= @order.amount_cents %>"
+        data-currency="<%= @order.amount.currency %>"></script>
+
+      </div>
+
+    </div>
+
+    <% end %>
+
+  </div>
+</div>
+
+
