--- a/app/views/layouts/_dashboard_artist.html.erb
+++ b/app/views/layouts/_dashboard_artist.html.erb
@@ -1,5 +1,18 @@
+
+
+<div class="full-artist-dashboard-container">
+
+<div class="views" style="text-align: right">
+<p>Total Views</p>
+<i class="fa fa-eye" aria-hidden="true"></i>
+<p>451</p>
+</div>
+
+<div class="artist-dashboard-container">
+
 <h2>Hello <%= current_artist.name %></h2>
-<h1>This is artist dashboard!</h1>
+
+
 
 <h3>Your appointments:</h3>
 
@@ -25,11 +38,14 @@
 <% current_artist.availabilities.each do |availability| %>
 <ul>
   <%= availability.day %>
+
   <%= availability.start_time %> -
   <%= availability.end_time %>
 </ul>
 <% end %>
 
-<%= link_to 'Edit Availability', new_availability_path %>
+<%= link_to 'Edit Availability', new_availability_path, class: "btn btn-artist-show" %>
 
 
+</div>
+</div>
