--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
 </head>
 <body>
- <%= render 'shared/navbar' %>
+ <%= render 'shared/navbar' if params[:controller] != 'chatrooms' %>
  <%= yield %>
 
  <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ENV['GOOGLE_API_SERVER_KEY']}" %>
