--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,6 @@
 @import "home";
 @import "edit_profile";
-@import "new_payment"
+@import "new_payment";
 
 @import "artist-show";
 @import "new-review";
