--- a/app/views/layouts/_dashboard_artist.html.erb
+++ b/app/views/layouts/_dashboard_artist.html.erb
@@ -1,20 +1,27 @@
 
 
-<div class="full-artist-dashboard-container">
+<div class="container-artist-dash">
 
-<div class="views" style="text-align: right">
+
+
+<div class="row">
+
+<div class="col-xs-6" style="padding-left: 55px; padding-top: 30px;">
+<h3>Hello <%= current_artist.name %></h3>
+</div>
+
+<div class="col-xs-6" style="padding-right: 50px; padding-top: 20px;">
+<div class="views">
 <p>Total Views</p>
 <i class="fa fa-eye" aria-hidden="true"></i>
 <p>451</p>
 </div>
+</div>
 
-<div class="artist-dashboard-container">
+<div class="row">
 
-<h2>Hello <%= current_artist.name %></h2>
-
-
-
-<h3>Your appointments:</h3>
+<div class="col-xs-12" style="padding-left: 70px;">
+<h4>Your appointments:</h4>
 
 <% @appointments.each do |appointment| %>
 
@@ -33,8 +40,15 @@
 <p><%= appointment.message %></p>
 
 <% end %>
+</div>
 
-<h3>Your current availability:</h3>
+</div>
+
+
+<div class="row">
+<div class="col-xs-12" style="padding-left: 70px;">
+
+<h4>Your current availability:</h4>
 <% current_artist.availabilities.each do |availability| %>
 <ul>
   <%= availability.day %>
@@ -45,7 +59,6 @@
 <% end %>
 
 <%= link_to 'Edit Availability', new_availability_path, class: "btn btn-artist-show" %>
-
-
+</div>
 </div>
 </div>
