--- a/app/assets/stylesheets/pages/_edit_profile.scss
+++ b/app/assets/stylesheets/pages/_edit_profile.scss
@@ -52,11 +52,17 @@
   box-shadow: none;
 }
 
+.picture-upload {
+  height: 20vh;
+  width: 20vh;
+}
+
 
 .picture-selected {
-  box-shadow: 10px 10px 5px 0px rgba(230,97,230,1);
+  box-shadow: 0px 0px 2px 3px $primary;
   transition: 0.1s ease;
-
+  background-image: url(http://www.freeiconspng.com/uploads/success-icon-10.png);
+  z-index: 1;
 }
 
 
