--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,10 +2,10 @@
 
 
 
-<% if current_artist.photos.count == 0 %>
-<%= render 'layouts/artist_pictures_select' %>
+<%# if current_artist.photos.count == 0 %>
+<%#= render 'layouts/artist_pictures_select' %>
 
-<% end %>
+<%# end %>
 
 
   <%= render partial: 'banner', locals: { cities: @cities, styles: @styles } %>
