--- a/app/views/layouts/_artist_pictures_select.html.erb
+++ b/app/views/layouts/_artist_pictures_select.html.erb
@@ -9,29 +9,63 @@
     <%= simple_form_for :select_pictures, url: upload_pictures_artist_path(current_artist), method: :post do |f|%>
 
 
+<!-- <span class="style-checkbox"></span> -->
+    <% current_artist.recent_media.each_with_index do |media, index| %>
+    <div class="col-xs-4 picture">
+          <span class="style-checkbox">
+          <label>
+           <div class="wrapper-upload">
 
-    <% current_artist.recent_media.each do |media| %>
-    <div class="col-xs-6 padded">  <span class="style-checkbox">
-      <label> <%= image_tag media["images"]["low_resolution"]["url"], class:"picture-upload" %>
-        <input class="check_boxes required multiselectuser" style="display: none;" autofocus="autofocus" required="required" aria-required="true" selected="selected" type="checkbox" value="<%= media["images"]["low_resolution"]["url"] %>"  data-size="small" data-on-color='success' data-on-text='yes' data-off-text='no' />
-      </label>
 
-    </span> </p> </div>
+          <%= image_tag media["images"]["low_resolution"]["url"], class: "picture-upload" %>
+
+           <div class="checked disappear picture-check">
+            <img class="picture-upload-checked" src='http://www.freeiconspng.com/uploads/success-icon-10.png' alt="">
+           </div>
+
+           <input class="check_boxes required multiselectuser to-hide"
+                  autofocus="autofocus"
+                  required="required multiselectuser"
+                  aria-required="true"
+                  selected="selected"
+                  type="checkbox"
+                  name= "select_pictures[]"
+                  id="select_pictures_<%= index %>"
+                  value="<%= media["images"]["low_resolution"]["url"] %>"
+                  style="display:none"
+                  data-size="small"
+                  data-on-color='success'
+                  data-on-text='yes'
+                  data-off-text='no' />
+                  </div>
+          </label>
+          </span>
+
+</div>
     <% end %>
 
 
 
-    <%= f.submit "Upload Pictures" %>
-    <% end %>
+
+
+
+
   </div>
+
+  <div class="container">
+
+</button>
+   <%= f.submit "Upload Pictures" , class: "upload-pictures btn btn-primary" %>
+    <% end %>
+    </div>
 </div>
 </div>
 
 
 <% content_for(:after_js) do  %>
     <%= javascript_tag do %>
-    $(".picture-upload").click(function() {
-      $(this).toggleClass("picture-selected");
+    $(".picture-upload").on("click", function(e) {
+      $(this).parent().find(".picture-check").toggleClass("disappear");
     });
   <% end %>
 <% end %>
