--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,4 +1,4 @@
-<% if current_artist && current_artist.photos.count == 0 %>
+<% if current_artist %>
 <div id="dashboard-artist">
 <%= render 'layouts/dashboard_artist', appointments: @appointments, current_artist: current_artist  %>
 <%= render 'layouts/artist_pictures_select' %>
