--- a/app/assets/stylesheets/pages/_chatroom_show.scss
+++ b/app/assets/stylesheets/pages/_chatroom_show.scss
@@ -5,6 +5,13 @@
   border: 2px solid white;
 }
 
+.chat-background {
+ background-image: url('http://bit.ly/2sUQfrb');
+ background-attachment: fixed;
+ overflow: scroll;
+ height: 100vh;
+}
+
 .chat-header {
   background-color: #7E57C2;
   height: 10vh;
@@ -13,8 +20,6 @@
 }
 
 .chat-body {
-  background-image: url('http://bit.ly/2sUQfrb');
-  background-attachment: fixed;
   margin-top: 72px;
   margin-bottom: 55px;
   width: 100%;
