Filter by city and artist

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -10,35 +10,20 @@
   <br>
   <br>
 
-  <% @artists.each do |artist| %>
+<% @artists.each do |artist| %>
+    <!-- if city is specified and style is not specified -->
+  <% style_match = artist.styles.select {|style| style.name == params[:style]} %>
+    <% if
+      (params[:city] == artist.city && params[:style] == "Choose a style")        ||
+      (params[:city] == "Choose a city" && params[:style] =="Choose a style")     ||
+      (params[:city] == artist.city && style_match.any?)                          ||
+      (params[:city] == "Choose a city" && style_match.any?)                      ||
+      (params)[:city] == nil
+     %>
+      <%= render 'artist_photo', artist: artist %>
 
-  <% if params[:city] != nil  %>
-
-    <% if artist.city == params[:city]%>
-    <div class="row no-gutter-artist-index">
-      <% artist.photos.each do |photo| %>
-      <div class="col-xs-4">
-        <%=link_to photo_path(photo) do %>
-          <%= image_tag photo.url, class: "img-responsive photo-artist-index" %>
-        <% end %>
-
-      </div>
-      <% end %>
-    </div>
-
-
-
-  <% end %>
-
-  <% elsif params[:city] == nil   %>
-
-
-
-
-
-  <% end %>
-
-  <% end  %>
+    <% end   %>
+<% end  %>
 
 </div>
 
