--- a/app/assets/stylesheets/pages/_edit_profile.scss
+++ b/app/assets/stylesheets/pages/_edit_profile.scss
@@ -53,8 +53,10 @@
 }
 
 .picture-upload {
-  height: 20vh;
-  width: 20vh;
+  width: 100%;
+  background-size: cover;
+  height: 100px;
+  background-position: center;
 }
 
 
@@ -100,8 +102,8 @@
 .upload-pictures.btn {
   width: 80%;
   background-color: $primary;
-  margin-bottom: 1vh;
-  margin-bottom: 1vh
+  margin: 0 auto;
+  display: block;
 }
 
 
