--- a/app/views/chatrooms/_artist_chatroom.html.erb
+++ b/app/views/chatrooms/_artist_chatroom.html.erb
@@ -1,42 +1,48 @@
-<div class="chat-header navbar-fixed-top">
-  <div class="col-xs-2">
-    <h3><strong><%= link_to '<', dashboard_path, class: 'no-text-decoration' %></strong></h3>
-  </div>
-  <div class='col-xs-8 text-center'>
-  <h3><%= @chatroom.appointment.user.username %></h3>
-  </div>
-  <div class='col-xs-2'><%= image_tag @chatroom.appointment.artist.avatar , class: "img-circle img-responsive img-chat" %>
-  </div>
-</div>
-</div>
-
-<div class="chat-body">
-  <div id="messages" data-user="artist">
-    <% @chatroom.messages.each do |message| %>
-    <% if message.from == 'artist' %>
-    <div class="row margin-0">
-      <div class="col-xs-8 text-left padding-0">
-        <p class="chat-bubble my-message"><%= message.content %></p>
-      </div>
+<div class="chat-background">
+  <div class="chat-header navbar-fixed-top">
+    <div class="col-xs-2">
+      <h3><strong><%= link_to '<', dashboard_path, class: 'no-text-decoration' %></strong></h3>
     </div>
-    <% elsif message.from == 'user' %>
-    <div class="row margin-0">
-      <div class="col-xs-8 col-xs-offset-4 text-left padding-0">
-        <p class="chat-bubble user-message"><%= message.content %></p>
-      </div>
+    <div class='col-xs-8 text-center'>
+      <h3><%= @chatroom.appointment.user.username %></h3>
     </div>
-    <% end %>
-    <% end %>
+    <div class='col-xs-2'><%= image_tag @chatroom.appointment.artist.avatar , class: "img-circle img-responsive img-chat" %>
+    </div>
   </div>
-  <div class="navbar-fixed-bottom chat-input">
-    <%= form_for @message, remote: true, authenticity_token: true do |f| %>
-    <%= f.text_area :content, class: "form-control chat-input", data: {textarea: "message"} %>
 
-    <%= f.hidden_field :chatroom_id, value: @chatroom.id %>
-    <%= f.hidden_field :from, value: 'artist' %>
-    <%= f.submit "send", class: "btn btn-primary", style: "display: none", data: {send: "message"} %>
-    <% end %>
+
+  <div class="chat-body">
+    <div id="messages" data-user="artist">
+      <% @chatroom.messages.each do |message| %>
+      <% if message.from == 'artist' %>
+      <div class="row margin-0">
+        <div class="col-xs-10 padding-0">
+          <div class="chat-bubble chat-relative">
+            <span clas=" my-message"><%= message.content %></span>
+            <span class="chat-absolute"><%= message.created_at.strftime("%H:%M") %></span>
+          </div>
+        </div>
+      </div>
+      <% elsif message.from == 'user' %>
+      <div class="row margin-0">
+        <div class="col-xs-10 col-xs-offset-2 padding-0">
+          <div class="chat-bubble-user pull-right chat-relative">
+            <span class="user-message"><%= message.content %></span>
+            <span class="chat-absolute"><%= message.created_at.strftime("%H:%M") %></span>
+          </div>
+        </div>
+      </div>
+      <% end %>
+      <% end %>
+    </div>
+    <div class="navbar-fixed-bottom chat-input">
+      <%= form_for @message, remote: true, authenticity_token: true do |f| %>
+      <%= f.text_area :content, class: "form-control chat-input", data: {textarea: "message"} %>
+
+      <%= f.hidden_field :chatroom_id, value: @chatroom.id %>
+      <%= f.hidden_field :from, value: 'artist' %>
+      <%= f.submit "send", class: "btn btn-primary", style: "display: none", data: {send: "message"} %>
+      <% end %>
+    </div>
   </div>
 </div>
-
-
