Fix datetime picker

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,5 @@
 @import "banner-landing-page";
 @import "form-home-page";
 @import "buttons";
-@import "home-info"
+@import "home-info";
+@import "form";
