--- a/app/assets/stylesheets/components/_banner-landing-page.scss
+++ b/app/assets/stylesheets/components/_banner-landing-page.scss
@@ -2,8 +2,9 @@
   color: white;
   text-align: center;
   height: 80vh;
-  background-image: linear-gradient(-225deg, rgba(0, 0, 0, 0.2) 0%, rgba(67, 67, 67, 0.2) 50%), url('http://bit.ly/2rgHMwB');
+  background-image: linear-gradient(-225deg, rgba(0, 0, 0, 0.2) 0%, rgba(67, 67, 67, 0.2) 50%), url('https://images.pexels.com/photos/194074/pexels-photo-194074.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb');
   background-size: cover !important;
+  background-position: center;
   display: flex;
   align-items: center;
   justify-content: center;
